# multi-model-rag

./: .gitignore  README.MD  README.md  clip-faiss.py  clip-fasis-rag.ipynb  data.txt  draw.ipynb  draw.py  draw_result.ipynb  easy_simple.ipynb  main.py  myRAG.py  new_embedding.py  new_stress_test.py  new_stress_test.txt  new_stress_test0.txt  profiling.py  pyproject.toml  requirements.txt  run_all_tests.sh  stress_test.py  stress_test_log_mem.txt  tensorboard.py  test_memory.py  test_system.py  utils.py
outputs_nsys/: text_emb.nsys-rep
src/: dataset.py  encode_mode.py  pool_manager.py  search_faiss.py  searchers.py  worker_runtime.py
src/rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
